--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asd-app",
+  "name": "asc-app",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -12,37 +12,77 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "@angular/animations": "^5.2.9",
+    "@angular/common": "^5.2.9",
+    "@angular/compiler": "^5.2.9",
+    "@angular/core": "^5.2.9",
+    "@angular/forms": "^5.2.9",
+    "@angular/http": "^5.2.9",
+    "@angular/platform-browser": "^5.2.9",
+    "@angular/platform-browser-dynamic": "^5.2.9",
+    "@angular/router": "^5.2.9",
+    "@ngtools/webpack": "^1.2.4",
+    "@types/connect-mongo": "0.0.35",
+    "@types/mongodb": "^3.0.10",
+    "angular-in-memory-web-api": "^0.5.4",
+    "app-settings": "^1.0.0",
+    "async": "^2.6.0",
+    "bcrypt-nodejs": "^0.0.3",
+    "bluebird": "^3.5.1",
+    "core-js": "^2.5.4",
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
+    "errorhandler": "^1.5.0",
+    "express": "^4.16.3",
+    "express-flash": "0.0.2",
+    "express-jwt": "^5.3.1",
+    "express-validator": "^4.3.0",
+    "jwt-express": "^1.1.0",
+    "lusca": "^1.5.2",
+    "mongodb": "^3.0.5",
+    "mongojs": "^2.5.0",
+    "mongoose": "^5.0.13",
+    "mysql": "^2.15.0",
+    "ng2-bootstrap-modal": "^1.0.1",
+    "nodemailer": "^4.4.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
+    "pug": "^2.0.0-rc.4",
+    "rootpath": "^0.1.2",
+    "rxjs": "^5.5.8",
+    "webpack": "^3.11.0",
+    "winston": "^2.4.0",
+    "zone": "^0.3.4",
+    "zone.js": "^0.8.25"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
+    "@angular/cli": "^1.7.3",
+    "@angular/compiler-cli": "^5.2.9",
+    "@angular/language-service": "^5.2.9",
+    "@types/async": "^2.0.45",
+    "@types/bcrypt-nodejs": "^0.0.30",
+    "@types/bluebird": "^3.5.20",
+    "@types/errorhandler": "^0.0.32",
+    "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "@types/mongoose": "^4.7.34",
+    "@types/node": "^6.0.104",
+    "@types/nodemailer": "^4.3.4",
+    "@types/passport-local": "^1.0.32",
+    "chalk": "^2.3.2",
+    "codelyzer": "^4.2.1",
+    "jasmine-core": "^3.1.0",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.4.2",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "^2.8.1"
   }
 }
